--- a/src/main/webapp/WEB-INF/html/test.html
+++ b/src/main/webapp/WEB-INF/html/test.html
@@ -15,6 +15,16 @@
 
     <script type="text/javascript">
         browser.applyPatches(PatchEnum.CSS3,PatchEnum.TRANSFORM,PatchEnum.PLACEHOLDER,PatchEnum.FETCH,PatchEnum.FETCH_JSONP)
+        window.hello = function (data) {
+            alert('hello' + JSON.stringify(data))
+        }
+//        fetchJsonp('http://www.runoob.com/try/ajax/jsonp.php',{jsonpCallback:'jsoncallback',jsonpCallbackFunction:'hello'}).then(function (response) {
+//            return response.text()
+//        }).then(function (text) {
+//            alert(text)
+//        })['catch'](function (error) {
+//            alert('error:'+error.message)
+//        })
 //        new Promise(function (resolve,reject) {
 //            var request
 //            if (window.XMLHttpRequest) {
@@ -42,86 +52,86 @@
 //        })['catch'](function (error) {
 //            console.log(JSON.stringify(error))
 //        })
-        var request = new Request('/test.html')
-        fetch(request).then(function(response) {
-            return response.json()
-        }).then(function (data) {
-            console.log(JSON.stringify(data))
-        })['catch'](function (error) {
-            console.log(JSON.stringify(error))
-        })
+//        var request = new Request('/test.html')
+//        fetch(request).then(function(response) {
+//            return response.json()
+//        }).then(function (data) {
+//            console.log(JSON.stringify(data))
+//        })['catch'](function (error) {
+//            console.log(JSON.stringify(error))
+//        })
 
 
-//        function ViewController(element) {
-//            BCSViewController.call(this,element)
-//            // get the canvas element using the DOM
-//            var canvas = document.getElementById('c');
-//            if (typeof FlashCanvas != "undefined") {
-//                canvas = FlashCanvas.initElement(canvas);
-//            }
-//            var redView = new BCSView2({ width:'100px',
-//                height:'100px',
-//                backgroundColor:'red'})
-//            this.getReady = function () {
-//                this.view.addSubView(redView)
-//                var blueView = new BCSView2()
-//                blueView.setStyle({
-//                    width:'100px',
-//                    height:'100px',
-//                    backgroundColor:'blue',
-//                    left:'500px',
-//                    top:'100px',
-//                    borderRadius:'10px',
-//                    behavior:'url(../js/PIE.htc)'
-//                })
-//                this.view.addSubView(blueView)
-//            }
-//            this.viewDidLoad = function () {
-//                this.draw()
-//                if(window.cssSandpaper){
-//                    cssSandpaper.setTransform(redView.layer, "rotate(25deg)")
-//                    cssSandpaper.setOpacity(redView.layer, 0.9)
-//                    cssSandpaper.setBoxShadow(redView.layer, "10px 10px 5px #ffcccc");
-//                    cssSandpaper.setGradient(redView.layer, "-sand-gradient(linear, center top, center bottom, from(#0000ff), to(#ff0000));")
-//                }else{
-//                    redView.setStyle({
-//                        transform:'skew(-17deg, 45deg) rotate(-125deg)'
-//                    })
-//                }
-//            }
-//
-//            this.draw = function () {
-//                Placeholders.enable()
-//                // Make sure we don't execute when canvas isn't supported
-//                if (canvas.getContext){
-//                    // use getContext to use the canvas for drawing
-//                    var ctx = canvas.getContext('2d');
-//                    // Draw shapes
-//                    for (i=0;i<4;i++){
-//                        for(j=0;j<3;j++){
-//                            ctx.beginPath();
-//                            var x          = 25+j*50;               // x coordinate
-//                            var y          = 25+i*50;               // y coordinate
-//                            var radius     = 20;                    // Arc radius
-//                            var startAngle = 0;                     // Starting point on circle
-//                            var endAngle   = Math.PI+(Math.PI*j)/2; // End point on circle
-//                            var clockwise  = i%2==0 ? false : true; // clockwise or anticlockwise
-//                            ctx.arc(x,y,radius,startAngle,endAngle, clockwise);
-//                            if (i>1){
-//                                ctx.fill();
-//                            } else {
-//                                ctx.stroke();
-//                            }
-//                        }
-//                    }
-//                } else {
-//                    alert('You need Safari or Firefox 1.5+ to see this demo.');
-//                }
-//
-//            }
-//        }
-//        ViewController.extend(BCSViewController)
-//        browser.runWith(ViewController,'app')
+        function ViewController(element) {
+            BCSViewController.call(this,element)
+            // get the canvas element using the DOM
+            var canvas = document.getElementById('c');
+            if (typeof FlashCanvas != "undefined") {
+                canvas = FlashCanvas.initElement(canvas);
+            }
+            var redView = new BCSView2({ width:'100px',
+                height:'100px',
+                backgroundColor:'red'})
+            this.getReady = function () {
+                this.view.addSubView(redView)
+                var blueView = new BCSView2()
+                blueView.setStyle({
+                    width:'100px',
+                    height:'100px',
+                    backgroundColor:'blue',
+                    left:'500px',
+                    top:'100px',
+                    borderRadius:'10px',
+                    behavior:'url(../js/PIE.htc)'
+                })
+                this.view.addSubView(blueView)
+            }
+            this.viewDidLoad = function () {
+                this.draw()
+                if(window.cssSandpaper){
+                    cssSandpaper.setTransform(redView.layer, "rotate(25deg)")
+                    cssSandpaper.setOpacity(redView.layer, 0.9)
+                    cssSandpaper.setBoxShadow(redView.layer, "10px 10px 5px #ffcccc");
+                    cssSandpaper.setGradient(redView.layer, "-sand-gradient(linear, center top, center bottom, from(#0000ff), to(#ff0000));")
+                }else{
+                    redView.setStyle({
+                        transform:'skew(-17deg, 45deg) rotate(-125deg)'
+                    })
+                }
+            }
+
+            this.draw = function () {
+                Placeholders.enable()
+                // Make sure we don't execute when canvas isn't supported
+                if (canvas.getContext){
+                    // use getContext to use the canvas for drawing
+                    var ctx = canvas.getContext('2d');
+                    // Draw shapes
+                    for (i=0;i<4;i++){
+                        for(j=0;j<3;j++){
+                            ctx.beginPath();
+                            var x          = 25+j*50;               // x coordinate
+                            var y          = 25+i*50;               // y coordinate
+                            var radius     = 20;                    // Arc radius
+                            var startAngle = 0;                     // Starting point on circle
+                            var endAngle   = Math.PI+(Math.PI*j)/2; // End point on circle
+                            var clockwise  = i%2==0 ? false : true; // clockwise or anticlockwise
+                            ctx.arc(x,y,radius,startAngle,endAngle, clockwise);
+                            if (i>1){
+                                ctx.fill();
+                            } else {
+                                ctx.stroke();
+                            }
+                        }
+                    }
+                } else {
+                    alert('You need Safari or Firefox 1.5+ to see this demo.');
+                }
+
+            }
+        }
+        ViewController.extend(BCSViewController)
+        browser.runWith(ViewController,'app')
 //       fetch('/vue').then(function (response) {
 //           return response.text()
 //       }).then(function (body) {
