--- a/src/main/webapp/WEB-INF/html/vue.html
+++ b/src/main/webapp/WEB-INF/html/vue.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div ms-controller="app">
-        <a href="index.html" id="a" ms-on-click="@blank">新页面打开</a><br>
-        <a href="index.html" id="b" ms-on-click="@self">当前页面打开</a>
+        <a href="fetchtest.html" id="a" ms-on-click="@blank">新页面打开</a><br>
+        <a href="fetchtest.html" id="b" ms-on-click="@self">当前页面打开</a>
     </div>
     <form>
 
